# Multi-Robot-Task-Allocation

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  devices.json  requirements.txt  requirements_individual.txt  robot_loop.uf2  smt.txt  task_config.json  test.py  test2.py  test_connection.c  test_connection.py
lib/submodule_edits/: CMakeLists.txt  MRTASolver.py  SolverInterface.py  imu.c  imu.h  quadrature_encoder.pio
scripts/: set_opencv_log_level.sh
src/: structs.py  tasks.h
src/bluetooth/: coordinator_ble_init.c  robot_ble_init.c
src/central/: BluetoothAPI.py  CentralNode.py  Coordinator.py  Coordinator3.py  Graph.py  GraphConstructor.py  MAPF_Wrapper.py  SMTSolver.py  Server.py  TaskCoordinator.py  UI.py  VideoToGraph.py  Vision.py  client.py  robot.py  util.py
src/centralNode/: CentralNode.py  Graph.py  VideoToGraph.py  util.py
src/central_node/: CentralNode.py  Coordinator.py  Graph.py  VideoToGraph.py  Vision.py  server.py
src/individual/: InstructionReceiver.py  MotorController.py  Robot.py
src/movement/: receive_assignments.c  send_assignments.c
src/robot/: RobotController.py  client.py  robot.py  robot_loop.c  robot_loop2.c  test.py
src/smrta_override/: MRTASolverOverride.py  SolverInterfaceOverride.py
src/test/: client.py  server.py
